home page + images

--- a/index.html
+++ b/index.html
@@ -8,114 +8,210 @@
     <title>Card Issoudun Project </title>
   </head>
   <body>
-    <div class="containerCard">
-      <div class="card hvr-grow hvr-shadow" id="salleDeR">
-        <div class="cardLeftPart">
-          <img src="images\SalleDeReception\grandeSalle1.jpg" alt="Salle de réception">
+    <header>
+      <nav>
+        <a class="logo" href="index.html">Centre de Congrès</a>
+        <ul class="nav-links">
+          <li><a href="#">Nos Salles</a></li>
+          <li><a href="#">Réserver</a></li>
+          <li><a href="#">Nous contacter</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
         </div>
-        <div class="cardRightPart">
-          <h2>SALLE DE RÉCEPTION</h2>
-          <div class="iconText">
-            <div class="icon">
-              <img src="icons/Personnes.svg" alt="personnes">
-              <h3>600</h3>
-            </div>
-            <div class="button">
-              <a href="#">RÉSERVER</a>
-            </div>
-            </div>
-          </div>
+      </nav>
+    </header>
+    <main class="MainContainer">
+      <img class="CdC" src="images/CDC exterieur/background.png" alt="Centre de Congrès">
+      <div class="background">
+        <div class="rectangle1">
+          <h1><bold>CENTRE DE CONGRÈS</bold></h1>
+          <h2>CHAMPS ÉLYSÉES</h2>
+          <p>
+            <bold>Votre complexe événementiel et économique au coeur d'Issoudun</bold>
+          </p>
         </div>
-      <div class="card hvr-grow hvr-shadow">
-        <div class="cardLeftPart">
-          <img src="images\Amphi\amphi1.jpg" alt="Amphithéatre Pierre Selleron">
-        </div>
-        <div class="cardRightPart">
-          <h2>AMPHITHÉATRE PIERRE SELLERON</h2>
-          <div class="iconText">
-            <div class="icon">
-              <img src="icons/Personnes.svg" alt="personnes">
-              <h3>350</h3>
-            </div>
-            <div class="icon" id="sceneSize">
-              <img src="icons/spotlight.svg" alt="Scène">
-              <h3>Scène</h3>
-            </div>
-            <div id="amphi" class="button">
-              <a href="#">RÉSERVER</a>
-            </div>
-            </div>
-          </div>
-        </div>
-      <div class="card hvr-grow hvr-shadow">
-          <div class="cardLeftPart">
-            <img src="images\hall\hall4.jpg" alt="Hall d'accueil">
-          </div>
-          <div class="cardRightPart">
-            <h2>HALL D'ACCUEIL</h2>
-            <div class="iconText">
-              <div class="icon" id="regleSize">
-                <img src="icons/Règle.svg" alt="règle">
-                <h3>315 mètres carrés</h3>
-              </div>
-              <div class="icon" id="sunSize">
-                <img src="icons/sun.svg" alt="soleil">
-                <h3>Lumière naturelle</h3>
-              </div>
-              <div id="hallAcc" class="button">
-                <a href="#">RÉSERVER</a>
-              </div>
-              </div>
-            </div>
-          </div>
-      <div class="card hvr-grow hvr-shadow">
-        <div class="cardLeftPart">
-          <img src="images\cuisines professionnelles\cuisines2.jpg" alt="Cuisines Professionelles">
-        </div>
-        <div class="cardRightPart">
-          <h2>CUISINES PROFESSIONELLES</h2>
-          <div class="iconText">
-            <div class="icon" id="forkSize">
-              <img src="icons/Fourchette.svg" alt="fourchette">
-              <h3>Accès direct à la salle de réception</h3>
-            </div>
-          </div>
-        </div>
+        <div class="rectangle2"> </div>
       </div>
-      <div class="card hvr-grow hvr-shadow">
-        <div class="cardLeftPart">
-          <img src="images\EspaceNumerique\epn2.jpg" alt="Espace numérique">
+      <div class="container-home">
+        <div class="presentation">
+          <img src="images/CDC exterieur/cdcJardins.jpg" alt="cdcJardins">
+          <div class="orangeP">
+            <p>
+              Un centre à la confluence de plusieurs univers : l’économie, les loisirs, la culture, les technologies de la communication et le festif.
+            </p>
+          </div>
         </div>
-        <div class="cardRightPart">
-          <h2>ESPACES NUMÉRIQUES</h2>
-          <div class="iconText">
-            <div class="icon" id="wifiSize">
-              <img src="icons/Internet.svg" alt="personnes">
-              <h3>Accès Internet</h3>
+        <div class="grey-background"></div>
+        <div class="title">
+          <h3>NOS SALLES & SERVICES</h3>
+        </div>
+        <div class="containerCard">
+          <div class="card hvr-grow hvr-shadow" id="salleDeR">
+            <div class="cardLeftPart">
+              <img src="images\SalleDeReception\grandeSalle1.jpg" alt="Salle de réception">
             </div>
-            <div class="button">
-              <a href="#">RÉSERVER</a>
+            <div class="cardRightPart">
+              <h2>SALLE DE RÉCEPTION</h2>
+              <div class="iconText">
+                <div class="icon">
+                  <img src="icons/Personnes.svg" alt="personnes">
+                  <h3>600</h3>
+                </div>
+                <div class="button">
+                  <a href="#">RÉSERVER</a>
+                </div>
+                </div>
+              </div>
             </div>
+          <div class="card hvr-grow hvr-shadow">
+            <div class="cardLeftPart">
+              <img src="images\Amphi\amphi1.jpg" alt="Amphithéatre Pierre Selleron">
+            </div>
+            <div class="cardRightPart">
+              <h2>AMPHITHÉATRE PIERRE SELLERON</h2>
+              <div class="iconText">
+                <div class="icon">
+                  <img src="icons/Personnes.svg" alt="personnes">
+                  <h3>350</h3>
+                </div>
+                <div class="icon" id="sceneSize">
+                  <img src="icons/spotlight.svg" alt="Scène">
+                  <h3>Scène</h3>
+                </div>
+                <div id="amphi" class="button">
+                  <a href="#">RÉSERVER</a>
+                </div>
+                </div>
+              </div>
+            </div>
+          <div class="card hvr-grow hvr-shadow">
+            <div class="cardLeftPart">
+              <img src="images\hall\hall4.jpg" alt="Hall d'accueil">
+            </div>
+            <div class="cardRightPart">
+              <h2>HALL D'ACCUEIL</h2>
+              <div class="iconText">
+                <div class="icon" id="regleSize">
+                  <img src="icons/Règle.svg" alt="règle">
+                  <h3>315 mètres carrés</h3>
+                </div>
+                <div class="icon" id="sunSize">
+                  <img src="icons/sun.svg" alt="soleil">
+                  <h3>Lumière naturelle</h3>
+                </div>
+                <div id="hallAcc" class="button">
+                  <a href="#">RÉSERVER</a>
+                </div>
+                </div>
+              </div>
+            </div>
+          <div class="card hvr-grow hvr-shadow">
+            <div class="cardLeftPart">
+              <img src="images\cuisines professionnelles\cuisines2.jpg" alt="Cuisines Professionelles">
+            </div>
+            <div class="cardRightPart">
+              <h2>CUISINES PROFESSIONELLES</h2>
+              <div class="iconText">
+                <div class="icon" id="forkSize">
+                  <img src="icons/Fourchette.svg" alt="fourchette">
+                  <h3>Accès direct à la salle de réception</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card hvr-grow hvr-shadow">
+            <div class="cardLeftPart">
+              <img src="images\EspaceNumerique\epn2.jpg" alt="Espace numérique">
+            </div>
+            <div class="cardRightPart">
+              <h2>ESPACES NUMÉRIQUES</h2>
+              <div class="iconText">
+                <div class="icon" id="wifiSize">
+                  <img src="icons/Internet.svg" alt="personnes">
+                  <h3>Accès Internet</h3>
+                </div>
+                <div class="button">
+                  <a href="#">RÉSERVER</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card hvr-grow hvr-shadow">
+            <div class="cardLeftPart">
+              <img src="images\SallesDeReunion\reunion5.jpg" alt="Hall de réunion">
+            </div>
+            <div class="cardRightPart">
+              <h2>HALL DE RÉUNION</h2>
+                <div class="iconText">
+                  <div class="icon">
+                    <img src="icons/Personnes.svg" alt="personnes">
+                    <h3>20-50</h3>
+                  </div>
+                  <div class="button">
+                    <a href="#">RÉSERVER</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      <div class="card hvr-grow hvr-shadow">
-        <div class="cardLeftPart">
-          <img src="images\SallesDeReunion\reunion5.jpg" alt="Hall de réunion">
-        </div>
-        <div class="cardRightPart">
-          <h2>HALL DE RÉUNION</h2>
-          <div class="iconText">
-            <div class="icon">
-              <img src="icons/Personnes.svg" alt="personnes">
-              <h3>20-50</h3>
-            </div>
-            <div class="button">
-              <a href="#">RÉSERVER</a>
-            </div>
-            </div>
+        <div class="cinema">
+          <img class="cinema" src="images/cinema/cinema.png" alt="cinema">
+          <section class="inside">
+            <img class="logo" src="images/cinema/logo.png" alt="logo Cinéma Champs Elysées">
+            <div class="cineText">
+              <h2>Un voyage. Des émotions. Vos cinémas !</h2>
+              <p>3 salles de cinéma pour retrouver vos films préférés</p>
+              <a href="https://cinemaelysees.com/">ACCÉDER AU SITE</a>
+            </section>
           </div>
         </div>
-    </div>
-  </body>
+        <div class="container-home">
+          <div class="Facebook">
+            <div class="title2">
+              <h3>SUIVEZ NOTRE ACTUALITÉ</h3>
+            </div>
+            <div class="text">
+              <p>Pour suivre l’actualité du Centre de Congrès, retrouvez nos différents évènements sur Facebook.</p>
+            </div>
+          </div>
+          <iframe class="fb" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FCDCIssoudun%2F%3Fref%3Dbr_rs&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+          <div class="button2">
+            <a href="#">NOUS CONTACTER</a>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div>
+          <ul>
+            <li class="titre"><h3>Contacts</h3></li>
+            <li><p>congres@issoudun.fr</p></li>
+            <li><p>Fax: 0254033267</p></li>
+            <li><p>Tel: +33 2 54 03 32 61</p></li>
+            <li><p>Centre de Congrès "Champs Élysées"</p></li>
+            <li><p>Boulevard Roosevelt</p></li>
+            <li><p>BP 150</p></li>
+            <li><p>36105 Issoudun</p></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+            <li><a href="#">Bip TV</a></li>
+            <li><a href="#">Centre culturel Albert Camus</a></li>
+            <li><a href="#">Musée de l'hospice Saint Roch</a></li>
+            <li><a href="#">Ville d'Issoudun</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><h3><a class="titre" href="#">Mentions légales</a></h3></li>
+          </ul>
+        </div>
+      </footer>
+      <script src="scripts/nav.js"></script>
+    </body>
 </html>
