--- a/pages/SalleDeReception.html
+++ b/pages/SalleDeReception.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Centre de Congrès - Salle de reception</title>
-    <meta name"description" content="Centre de congrès de la mairie d'Issoudun"/>
+    <meta name="description" content="Centre de congrès de la mairie d'Issoudun"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/template.css">
