--- a/pages/EspaceNumerique.html
+++ b/pages/EspaceNumerique.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Centre de Congrès - Espace Numérique</title>
-    <meta name"description" content="Centre de congrès de la mairie d'Issoudun"/>
+    <meta name="description" content="Centre de congrès de la mairie d'Issoudun"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/template.css">
@@ -14,26 +14,27 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="index.html">Centre de Congrès</a>
+        <a class="logo" href="../index.html">Centre de Congrès</a>
         <ul class="nav-links">
-            <li>
-                <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
-                <ul class="submenu">
-                    <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
-                    <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
-                    <li><a href="pages/SalleDeReception">Salle de réception</a></li>
-                    <li><a href="pages/SalleDeReunion">Salle de réunion</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Réserver</a></li>
-            <li><a href="#">Nous contacter</a></li>
+          <li>
+              <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
+              <ul class="submenu">
+                  <li><a href="amphitheatre.html">Amphithéâtre</a></li>
+                  <li><a href="EspaceNumerique.html">Espace numérique</a></li>
+                  <li><a href="SalleDeReception.html">Salle de réception</a></li>
+                  <li><a href="SalleDeReunion.html">Salle de réunion</a></li>
+                  <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
+              </ul>
+          </li>
+          <li><a href="book.html">Réserver</a></li>
+          <li><a href="contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
-    </nav>
+      </nav>
     </header>
     <main class="container">
       <div class="square"></div>
