update book responsive

--- a/pages/book.html
+++ b/pages/book.html
@@ -52,7 +52,7 @@
         </div>
         <div class="blocTwo container">
             <form class="formContainer " action="mail.php" method="post">
-                <div class="flexobx">
+                <div class="flexbox">
                   <div class="item">
                     <label for="subject">Salle</label><br>
                     <select name="room" id="subject">
