--- a/pages/book.html
+++ b/pages/book.html
@@ -13,28 +13,30 @@
     </script>
   </head>
   <body>
-    <nav>
-      <a class="logo" href="../index.html">Centre de Congrès</a>
-      <ul class="nav-links">
-        <li>
-            <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
-            <ul class="submenu">
-                <li><a href="amphitheatre.html">Amphithéâtre</a></li>
-                <li><a href="EspaceNumerique.html">Espace numérique</a></li>
-                <li><a href="SalleDeReception.html">Salle de réception</a></li>
-                <li><a href="SalleDeReunion.html">Salle de réunion</a></li>
-                <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
-            </ul>
-        </li>
-        <li><a href="book.html">Réserver</a></li>
-        <li><a href="contacts.html">Nous contacter</a></li>
-      </ul>
-      <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-      </div>
-    </nav>
+    <header>
+      <nav>
+        <a class="logo" href="../index.html">Centre de Congrès</a>
+        <ul class="nav-links">
+          <li>
+              <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
+              <ul class="submenu">
+                  <li><a href="amphitheatre.html">Amphithéâtre</a></li>
+                  <li><a href="EspaceNumerique.html">Espace numérique</a></li>
+                  <li><a href="SalleDeReception.html">Salle de réception</a></li>
+                  <li><a href="SalleDeReunion.html">Salle de réunion</a></li>
+                  <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
+              </ul>
+          </li>
+          <li><a href="book.html">Réserver</a></li>
+          <li><a href="contacts.html">Nous contacter</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+      </nav>
+    </header>
     <main class="container">
         <div class="container blocOne">
           <div class="container arrow">
