--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/contacts.css">
-    <link rel="stylesheet" href="../styles/slider.css">
     <link rel="stylesheet" href="../styles/nav.css">
+    <link rel="stylesheet" href="../styles/footer.css">
     <script src="scripts/main.js">
     </script>
   </head>
@@ -51,9 +51,8 @@
         </section>
       </section>
       <section class="blocTwo container">
-        <section class="background formContainer ">
-          <form class="formContainer " action="contacts.php" method="post">
-              <section class="firstFlexobx">
+        <form class="formContainer " action="contacts.php" method="post">
+              <section class="flexbox">
                 <section class="item">
                   <label for="nameinput">Nom</label><br>
                   <input class="main" type="text" name="name" id="nameinput">
@@ -67,42 +66,50 @@
                     <input class="main" type="text" name="email" id="emailinput">
                   </section>
                 </section>
-                  <section class="fourthFlexbox">
-                    <section class="item message">
+                <section class="flexbox">
+                  <section class="item message">
                       <label for="remarks">Votre message</label>
                       <textarea type ="text" class="writeHere"name="message" rows="8" cols="8"></textarea>
                     </section>
                   </section>
                 </section>
-                <section class="booking container">
-                 <input class="bookingButton" type="submit" value="Réserver" name="send">
-                </section>
-              </form>
-    </main>
-    <footer class="center">
-      <section class="footerContainer container">
-        <div class="footerDiv container">
-          <h6>Contacts</h6>
-          <span>congres@issoudun.fr</span>
-          <span>Fax : 0254033267</span>
-          <span>+33 2 54 03 32 61</span>
-          <span>Centre des Congrès «Champs Élysées»</span>
-          <span>Boulevard Roosevelt</span>
-          <span>BP 150</span>
-          <span>36105 Issoudun</span>
-        </div>
-        <div class="footerDiv container">
-          <h6>À découvrir sur Issoudun</h6>
-          <a href="https://www.biptv.tv/">Bip TV</a>
-          <a href="https://www.ccacissoudun.tv/">Centre Culturel Albert Camus</a>
-          <a href="https://www.museeissoudun.tv/">Musée de l'Hospice Saint Roch</a>
-          <a href="http://www.issoudun.fr/">Site de la ville d'Issoudun</a>
-        </div>
-        <div class="footerDiv container">
-          <h6><a href="#">Mentions légales</a></h6>
-        </div>
+                <div class="containerButton">
+                  <div class="button">
+                    <a href="/pages/sent.html">RÉSERVEZ</a>
+                  </div>
+                </div>
+        </form>
       </section>
+    </main>
+    <footer>
+      <div>
+          <ul>
+              <li class="titre"><h3>Contacts</h3></li>
+              <li><p>congres@issoudun.fr</p></li>
+              <li><p>Fax: 0254033267</p></li>
+              <li><p>Tel: +33 2 54 03 32 61</p></li>
+              <li><p>Centre de Congrès "Champs Élysées"</p></li>
+              <li><p>Boulevard Roosevelt</p></li>
+              <li><p>BP 150</p></li>
+              <li><p>36105 Issoudun</p></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+              <li><a href="#">Bip TV</a></li>
+              <li><a href="#">Centre culturel Albert Camus</a></li>
+              <li><a href="#">Musée de l'hospice Saint Roch</a></li>
+              <li><a href="#">Ville d'Issoudun</a></li>
+          </ul>
+      </div>
+      <div>
+          <ul>
+              <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+          </ul>
+      </div>
     </footer>
+    <script src="../scripts/nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
     <script src="nav.js"></script>
   </body>
 </html>
