--- a/index.html
+++ b/index.html
@@ -5,21 +5,32 @@
     <meta name="description" content="description de ma page">
     <link href="styles/hover-min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/card.css">
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <title>Card Issoudun Project </title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="logo" href="index.html">Centre de Congrès</a>
+        <a class="logo" href="../index.html">Centre de Congrès</a>
         <ul class="nav-links">
-          <li><a href="#">Nos Salles</a></li>
-          <li><a href="#">Réserver</a></li>
-          <li><a href="#">Nous contacter</a></li>
+          <li>
+              <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
+              <ul class="submenu">
+                  <li><a href="amphitheatre.html">Amphithéâtre</a></li>
+                  <li><a href="EspaceNumerique.html">Espace numérique</a></li>
+                  <li><a href="SalleDeReception.html">Salle de réception</a></li>
+                  <li><a href="SalleDeReunion.html">Salle de réunion</a></li>
+                  <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
+              </ul>
+          </li>
+          <li><a class="book-not-displayed" href="book.html">Réserver</a></li>
+          <li><a href="contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
         </div>
       </nav>
     </header>
