Up nav links index.html

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="../index.html">Centre de Congrès</a>
+        <a class="logo" href="index.html">Centre de Congrès</a>
         <ul class="nav-links">
           <li>
               <a href="#">Nos Salles <span class="arrow">&#x25BC;</span> </a>
               <ul class="submenu">
-                  <li><a href="amphitheatre.html">Amphithéâtre</a></li>
-                  <li><a href="EspaceNumerique.html">Espace numérique</a></li>
-                  <li><a href="SalleDeReception.html">Salle de réception</a></li>
-                  <li><a href="SalleDeReunion.html">Salle de réunion</a></li>
-                  <li><a href="HallDaccueil.html">Hall d'accueil</a></li>
+                  <li><a href="pages/amphitheatre.html">Amphithéâtre</a></li>
+                  <li><a href="pages/EspaceNumerique.html">Espace numérique</a></li>
+                  <li><a href="pages/SalleDeReception.html">Salle de réception</a></li>
+                  <li><a href="pages/SalleDeReunion.html">Salle de réunion</a></li>
+                  <li><a href="pages/HallDaccueil.html">Hall d'accueil</a></li>
               </ul>
           </li>
-          <li><a class="book-not-displayed" href="book.html">Réserver</a></li>
-          <li><a href="contacts.html">Nous contacter</a></li>
+          <li><a class="book-not-displayed" href="pages/book.html">Réserver</a></li>
+          <li><a href="pages/contacts.html">Nous contacter</a></li>
         </ul>
         <div class="burger">
             <div class="line1"></div>
