--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -38,78 +38,78 @@
       </nav>
     </header>
     <main class="container">
-      <section class="container blocOne">
-        <section class="container arrow">
+      <div class="container blocOne">
+        <div class="container arrow">
           <img src="../images/Arrow.png" alt="Arrow"></img>
-        </section>
-        <section class="container text">
-          <section class="container title">
+        </div>
+        <div class="container text">
+          <div class="container title">
             <span class="orange"></span>
             <h2 class="textTitle">CONTACTEZ NOUS</h2>
-          </section>
+          </div>
           <p class="smallText">Vous avez une question ? N’hésitez pas à nous contacter via ce formulaire, ou par téléphone au : 02 54 03 32 68. </p>
-        </section>
-      </section>
-      <section class="blocTwo container">
+        </div>
+      </div>
+      <div class="blocTwo container">
         <form class="formContainer " action="contacts.php" method="post">
-              <section class="flexbox">
-                <section class="item">
-                  <label for="nameinput">Nom</label><br>
-                  <input class="main" type="text" name="name" id="nameinput">
-                </section>
-                  <section class="item">
-                   <label for="nameinput">Prénom</label><br>
-                   <input class="main" type="text" name="firstname" id="firstnameinput">
-                 </section>
-                  <section id="email" class="item">
-                    <label for="email">E-mail</label><br>
-                    <input class="main" type="text" name="email" id="emailinput">
-                  </section>
-                </section>
-                <section class="flexbox">
-                  <section class="item message">
-                      <label for="remarks">Votre message</label>
-                      <textarea type ="text" class="writeHere"name="message" rows="8" cols="8"></textarea>
-                    </section>
-                  </section>
-                </section>
-                <div class="containerButton">
-                  <div class="button">
-                    <a href="/pages/sent.html">RÉSERVEZ</a>
-                  </div>
-                </div>
-        </form>
-      </section>
-    </main>
-    <footer>
-      <div>
-          <ul>
-              <li class="titre"><h3>Contacts</h3></li>
-              <li><p>congres@issoudun.fr</p></li>
-              <li><p>Fax: 0254033267</p></li>
-              <li><p>Tel: +33 2 54 03 32 61</p></li>
-              <li><p>Centre de Congrès "Champs Élysées"</p></li>
-              <li><p>Boulevard Roosevelt</p></li>
-              <li><p>BP 150</p></li>
-              <li><p>36105 Issoudun</p></li>
-          </ul>
-      </div>
-      <div>
-          <ul>
-              <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
-              <li><a href="#">Bip TV</a></li>
-              <li><a href="#">Centre culturel Albert Camus</a></li>
-              <li><a href="#">Musée de l'hospice Saint Roch</a></li>
-              <li><a href="#">Ville d'Issoudun</a></li>
-          </ul>
-      </div>
-      <div>
-          <ul>
-              <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
-          </ul>
-      </div>
-    </footer>
-    <script src="../scripts/nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
-    <script src="nav.js"></script>
+          <div class="flexbox">
+            <div class="item">
+              <label for="nameinput">Nom</label><br>
+              <input class="main" type="text" name="name" id="nameinput">
+            </div>
+            <div class="item">
+              <label for="nameinput">Prénom</label><br>
+              <input class="main" type="text" name="firstname" id="firstnameinput">
+            </div>
+            <div id="email" class="item">
+              <label for="email">E-mail</label><br>
+              <input class="main" type="text" name="email" id="emailinput">
+            </div>
+          </div>
+          <div class="flexbox">
+            <div class="item message">
+              <label for="remarks">Votre message</label>
+              <textarea type ="text" class="writeHere"name="message" rows="8" cols="8"></textarea>
+            </div>
+          </div>
+          <div class="containerButton">
+            <div class="button">
+              <a href="/pages/sent.html">RÉSERVEZ</a>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </main>
+  <footer>
+    <div>
+      <ul>
+        <li class="titre"><h3>Contacts</h3></li>
+        <li><p>congres@issoudun.fr</p></li>
+        <li><p>Fax: 0254033267</p></li>
+        <li><p>Tel: +33 2 54 03 32 61</p></li>
+        <li><p>Centre de Congrès "Champs Élysées"</p></li>
+        <li><p>Boulevard Roosevelt</p></li>
+        <li><p>BP 150</p></li>
+        <li><p>36105 Issoudun</p></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li class="titre"><h3>À découvrir sur Issoudun</h3></li>
+        <li><a href="#">Bip TV</a></li>
+        <li><a href="#">Centre culturel Albert Camus</a></li>
+        <li><a href="#">Musée de l'hospice Saint Roch</a></li>
+        <li><a href="#">Ville d'Issoudun</a></li>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><h3><a class="titre" href="legalnotice.html">Mentions légales</a></h3></li>
+      </ul>
+    </div>
+  </footer>
+  <script src="../scripts/nav.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
+  <script src="nav.js"></script>
   </body>
 </html>
