--- a/slider.html
+++ b/slider.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="slider.css"> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
+    <link rel="stylesheet" href="styles/slider.css"> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
     <title>Slider</title>
 </head>
 <body>
@@ -26,6 +26,6 @@
     </div>
     <!-- Slider END -->
 
-    <script src="slider.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
+    <script src="scripts/slider.js"></script> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
 </body>
 </html>
