update css responsive

--- a/pages/book.html
+++ b/pages/book.html
@@ -102,29 +102,29 @@
                       <div class="restoChoice">
 
                         <label class="choiceContainer ">Oui, une restauration chaude
-                          <input class="hot" type="radio" name="resto" value="Restauration chaude" checked="checked">
+                          <input class="hot" type="checkbox" name="resto" value="Restauration chaude" checked="checked">
                           <span class="checkmark"></span>
                         </label>
 
                         <label class="choiceContainer ">Oui, une restauration froide
-                          <input class="cold" type="radio" name="resto" value="Restauration froide">
+                          <input class="cold" type="checkbox" name="resto" value="Restauration froide">
                           <span class="checkmark"></span>
                         </label>
 
                         </div>
                         <div class="secondChoices">
                           <label class="choiceContainer">Un accueil café
-                            <input class="item" type="radio" name="resto" value="Accueil Café">
+                            <input class="item" type="checkbox" name="resto" value="Accueil Café">
                             <span class="checkmark"></span>
                           </label>
 
                           <label class="choiceContainer">Un cocktail
-                            <input class="item" type="radio" name="resto" value="Cocktail">
+                            <input class="item" type="checkbox" name="resto" value="Cocktail">
                             <span class="checkmark"></span>
                           </label>
 
                           <label class="choiceContainer">Non
-                            <input class="no" type="radio" name="resto" value="Restauration chaude">
+                            <input class="no" type="checkbox" name="resto" value="Restauration chaude">
                             <span class="checkmark"></span>
                           </label>
                         </div>
@@ -138,8 +138,8 @@
                     </div>
                   </div>
                   <div class="containerButton">
-                    <div class="button">
-                      <a href="/pages/sent.html">RÉSERVEZ</a>
+                    <div>
+                      <input type="submit" name="send" value="Réservez">
                     </div>
                   </div>
                 </form>
