--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -74,7 +74,9 @@
           </div>
           <div class="containerButton">
             <div class="button">
-              <a href="/pages/sent.html">RÉSERVEZ</a>
+              <div>
+                <input type="submit" name="send" value="Réservez">
+              </div>
             </div>
           </div>
         </div>
