--- a/pages/sent.html
+++ b/pages/sent.html
@@ -7,8 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../styles/book.css">
-    <link rel="stylesheet" href="../styles/nav.css"> <!-- Ne pas oublier de changer en fonction de la position de ce fichier et du dossier de référence -->
-    </script>
+    <link rel="stylesheet" href="../styles/nav.css"> 
   </head>
   <body class="container">
     <header>
