--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="cineText">
               <h2>Un voyage. Des émotions. Vos cinémas !</h2>
               <p>3 salles de cinéma pour retrouver vos films préférés</p>
-              <a href="https://cinemaelysees.com/">ACCÉDER AU SITE</a>
+              <a class="hvr-pop" href="https://cinemaelysees.com/">ACCÉDER AU SITE</a>
             </section>
           </div>
         </div>
@@ -180,7 +180,7 @@
             </div>
           </div>
           <iframe class="fb" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FCDCIssoudun%2F%3Fref%3Dbr_rs&tabs=timeline&width=500&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="700" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-          <div class="button2">
+          <div class="button2 hvr-grow">
             <a href="#">NOUS CONTACTER</a>
           </div>
         </div>
